--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,7 @@
 [versions]
-agp = "8.4.2"
+agp = "8.3.2"
+android-minSdk = "24"
+android-compileSdk = "34"
 androidx-activityCompose = "1.9.0"
 androidx-ui-tooling = "1.6.8"
 compose-plugin = "1.6.11"
@@ -25,6 +27,7 @@ voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
+androidLibrary = { id = "com.android.library", version.ref = "agp" }
 composeCompiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose-plugin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
